--- a/index.html
+++ b/index.html
@@ -125,6 +125,25 @@
             <p id="personalityText" style="font-size: 15px; color: #444;"></p>
         </div>
 
+       <div class="analysis-card">
+            <h4>💼 行事風格 (月支十神格局)</h4>
+            <p><strong>您的格局傾向：</strong> <span id="patternType"></span></p>
+            <p id="godPatterns"></p>
+        </div>
+        
+        <div class="analysis-card">
+            <h4>💡 十神解釋小貼士</h4>
+            <div style="font-size: 14px; color: #666;">
+                <p><span class="tag">比肩/劫財</span> 代表朋友、競爭、自尊心。</p>
+                <p><span class="tag">食神/傷官</span> 代表才華、表達、創意、享樂。</p>
+                <p><span class="tag">正財/偏財</span> 代表金錢、物質、控制慾、現實。</p>
+                <p><span class="tag">正官/七殺</span> 代表地位、壓力、責任、行動力。</p>
+                <p><span class="tag">正印/偏印</span> 代表思考、長輩、學習、安全感。</p>
+            </div>
+        </div>
+    </div>
+</div>
+
         <div class="marketing-box">
             <div class="marketing-title">⚠️ 電腦排盤僅供參考，命好更需運助</div>
             <div class="marketing-text">
