--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
                 
                 <div class="social-buttons">
-                    <a href="https://line.me/ti/p/960yhrpr" target="_blank" class="btn-social btn-line">
+                    <a href="https://lin.ee/G7u1wKz" target="_blank" class="btn-social btn-line">
                         <i class="fab fa-line"></i> 加 LINE 諮詢服務
                     </a>
                     <a href="https://instagram.com/bychenhe" target="_blank" class="btn-social btn-ig">
