--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="container">
     <h1> 八字命理  基本解析</h1>
     <div class="subtitle">解析格局、身強弱、健康與即時流運</div>
-    <div class="subtitle">輸入的資料不會被儲存，請放心使用</div>
+    <div>輸入的資料不會被儲存，請放心使用</div>
 
     <div class="form-row">
         <div class="input-group">
