--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>八字命盤 V2.4 | 彈性時辰版</title>
+    <title>八字命盤 V2.4</title>
     <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.6.12/lunar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -91,9 +91,8 @@
 <body>
 
 <div class="container">
-    <h1> 八字命理  基本解析</h1>
-    <div class="subtitle">解析格局、身強弱、健康與即時流運      
-                          輸入的資料不會被儲存，請放心使用</div>
+    <h1> 八字命理 基本解析 </h1>
+    <div class="subtitle">解析格局、身強弱、健康與即時流運</div>
 
     <div class="form-row">
         <div class="input-group">
@@ -251,6 +250,7 @@
     </div>
     
     <div class="footer">
+            輸入的資料不會被儲存，請放心使用
         &copy; 2024 八字命理系統 | V2.4 彈性時辰版
     </div>
 </div>
