--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
     
     <div class="footer">
             輸入的資料不會被儲存，請放心使用
+    </div>
         &copy; 2024 八字命理系統 | V2.4 彈性時辰版
     </div>
 </div>
