--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     
     <div class="footer">
             輸入的資料不會被儲存，請放心使用
-    </div>
-        &copy; 2024 八字命理系統 | V2.4 彈性時辰版
+    <div class="footer">
+        &copy; 2026 八字命理系統 @bychenhe
     </div>
 </div>
 
