--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <body>
 
 <div class="container">
-    <h1><i class="fas fa-yin-yang"></i> 四柱八字 基本解析 </h1>
+    <h1><i class="fas fa-yin-yang"></i> 四柱八字 </h1>
+    <h1> 基本解析 </h1>
     <div class="subtitle">解析格局、身強弱、健康與即時流運</div>
 
     <div class="form-row">
