--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         body { font-family: "Microsoft JhengHei", "PingFang TC", Arial, sans-serif; background-color: #f0f2f5; display: flex; justify-content: center; padding: 20px; line-height: 1.6; padding-bottom: 80px; }
         .container { background: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); width: 100%; max-width: 900px; position: relative; }
         
-        h1 { text-align: center; color: #2c3e50; margin-bottom: 5px; }
-        .subtitle { text-align: center; color: #7f8c8d; font-size: 14px; margin-bottom: 25px; }
+        h1 { text-align: center; color: #2c3e50; margin-bottom: 5px; font-size: 28px; }
+        .subtitle { text-align: center; color: #7f8c8d; font-size: 18px; margin-bottom: 25px; }
 
         .form-row { display: flex; gap: 15px; margin-bottom: 15px; flex-wrap: wrap; }
         .input-group { flex: 1; min-width: 150px; }
@@ -94,8 +94,8 @@
 <body>
 
 <div class="container">
-    <h1><i class="fas fa-yin-yang"></i> 四柱八字 </h1>
-    <h1> 基本解析 </h1>
+    <h1><i class="fas fa-yin-yang"></i> 四柱八字 基本解析 </h1>
+    
     <div class="subtitle">解析格局、身強弱、健康與即時流運</div>
 
     <div class="form-row">
