--- a/index.html
+++ b/index.html
@@ -411,6 +411,19 @@
             '癸': '癸水如雨露，溫柔內向，想像力富。您心思細密，善於觀察，但情緒容易受環境影響。您外表平靜，內心卻情感豐富。'
         };
         
+       const godPatterns = {
+        '比肩': '建祿格/比肩強：您渴望獨立自主，不喜歡依賴。適合靠專業技能或合夥創業，但需注意人際競爭與錢財分奪的問題。',
+        '劫財': '羊刃/劫財強：您野心勃勃，社交手腕高明，是天生的業務好手。但性格中有衝動的一面，投資理財需特別謹慎，以免大進大出。',
+        '食神': '食神格：您天生有福氣，重視生活品味，性格溫和不喜爭鬥。適合從事餐飲、藝術或需要發揮創意的行業，一生多貴人。',
+        '傷官': '傷官格：您才華洋溢，反應極快，討厭傳統束縛。雖然能力強，但容易因為心直口快而得罪長官或另一半，適合自由業或技術職。',
+        '正財': '正財格：您是標準的務實派，做事謹慎，重視家庭責任。您不喜歡高風險的投機，相信勤勞致富，適合穩定的職場發展。',
+        '偏財': '偏財格：您金錢觀念靈活，慷慨豪爽，善於交際。您不喜歡死守固定薪水，具有商業頭腦，適合經商、投資或業務性質工作。',
+        '正官': '正官格：您為人正直，自律甚嚴，重視名譽與信用。您具有管理才能，適合在大型企業或公家機關發展，是典型的領導人才。',
+        '七殺': '七殺格：您具有強烈的執行力與權威感，不畏艱難。混亂的環境反而能激發您的潛能，適合軍警、法務或高挑戰性的管理職。',
+        '正印': '正印格：您心地善良，重視精神層面，有長輩緣。您喜歡學習，性格保守安靜，適合教育、學術或文化出版相關領域。',
+        '偏印': '偏印格：您思考獨特，直覺敏銳，對神祕學或冷門知識感興趣。您不喜歡隨波逐流，適合從事設計、研發或身心靈相關產業。'
+        };
+
         document.getElementById('dayMasterDesc').innerText = `${toTraditional(dayGan)}日主 (${getElementFromChar(dayGan)})`;
         document.getElementById('personalityText').innerText = personalities[dayGan] || '';
 
@@ -560,6 +573,10 @@
         if (!isUnknownTime) {
             userPillars.push({ name: "時柱(子女)", gan: baZi.getTimeGan(), zhi: baZi.getTimeZhi() });
         }
+
+        let advice = [];
+        if (me === todayGan) advice.push("今日是「比劫」日，人際互動多，適合社交，但注意花費。");
+
 
         const chongMap = {'子':'午', '午':'子', '丑':'未', '未':'丑', '寅':'申', '申':'寅', '卯':'酉', '酉':'卯', '辰':'戌', '戌':'辰', '巳':'亥', '亥':'巳'};
         const heMap = {'子':'丑', '丑':'子', '寅':'亥', '亥':'寅', '卯':'戌', '戌':'卯', '辰':'酉', '酉':'辰', '巳':'申', '申':'巳', '午':'未', '未':'午'};
